--- a/index.html
+++ b/index.html
@@ -354,12 +354,12 @@
                     <li class="testimonial">
                         <div class="row m0 testimonialText">Хороші майстри, без проблем знайшли спільну мову. Рекомендую усім скористатись їхніми послугами. Вважаю за потрібне поділитись хорошим відгуком!</div>
                         <!--<div class="row m0 clientPhoto"><img src="images/testimonial/1.jpg" alt=""></div>-->
-                        <h5>Петренко Петро<span>Бухгалтер</span></h5>
+                        <h5>Суханов Леонід<span>Механік</span></h5>
                     </li>
                     <li class="testimonial">
-                        <div class="row m0 testimonialText">Давно планував зробити ремонт в квартирі!. Замови послуги даної фірми іне пошкодував, все виконано на вищому рівні за, що  дуже вдячний! Рекомендую до співпраці!</div>
+                        <div class="row m0 testimonialText">Давно планувала зробити ремонт в квартирі!  Замовила послуги даної фірми і не пошкодувала, все виконано на вищому рівні за, що  дуже вдячна! Рекомендую до співпраці!</div>
                         <!--<div class="row m0 clientPhoto"><img src="images/testimonial/1.jpg" alt=""></div>-->
-                        <h5>Василенко Василь<span>Механік</span></h5>
+                        <h5>Павлова Діана<span>Бухгалтер</span></h5>
                     </li>
                 </ul>
             </div>
