--- a/project3col.html
+++ b/project3col.html
@@ -149,6 +149,7 @@
                     <li data-filter=".bridges">Євроремонт</li>
                     <li data-filter=".others">VIP ремонт</li>
                     <li data-filter=".marmur">Роботи по мармуру</li>
+                    <li data-filter=".velvet">Вельвет, декоративне оздоблення</li>
                 </ul>
             </div>
             <div class="row" id="projectsContainer">
@@ -468,6 +469,49 @@
                             <div class="post_thumbnail_bg"></div>
                         </a>
                     </div>
+                    <!--<a href="#"><h5 class="porjectTitle">QUISQUE SODALES NISL ANTE</h5></a>-->
+                </div><!--Project-->
+                <div class="col-sm-4 project velvet">
+                    <div class="post_thumbnail_row row m0">
+                        <a href="images/velvet/img-vel-1-macro.jpg" data-lightbox="image-1" data-title="My caption">
+                            <img src="images/velvet/im-vel-1.jpg" alt="" class="post_thumbnail">
+                            <div class="post_thumbnail_bg"></div>
+                        </a>
+                    </div>
+                    <!--<a href="#"><h5 class="porjectTitle">QUISQUE SODALES NISL ANTE</h5></a>-->
+                </div><!--Project-->
+                <div class="col-sm-4 project velvet">
+                    <div class="post_thumbnail_row row m0">
+                        <a href="images/velvet/img-vel-2-macro.jpg" data-lightbox="image-1" data-title="My caption">
+                            <img src="images/velvet/im-vel-2.jpg" alt="" class="post_thumbnail">
+                            <div class="post_thumbnail_bg"></div>
+                        </a>
+                    </div>
+                    <!--<a href="#"><h5 class="porjectTitle">QUISQUE SODALES NISL ANTE</h5></a>-->
+                </div><!--Project-->
+                <div class="col-sm-4 project velvet">
+                    <div class="post_thumbnail_row row m0">
+                        <a href="images/velvet/img-vel-2-macro.jpg" data-lightbox="image-1" data-title="My caption">
+                            <img src="images/velvet/im-vel-3.jpg" alt="" class="post_thumbnail">
+                            <div class="post_thumbnail_bg"></div>
+                        </a>
+                    </div>
+                    <!--<a href="#"><h5 class="porjectTitle">QUISQUE SODALES NISL ANTE</h5></a>-->
+                </div><!--Project-->
+                <div class="col-sm-4 project velvet">
+                    <div class="post_thumbnail_row row m0">
+                        <a href="images/velvet/img-vel-2-macro.jpg" data-lightbox="image-1" data-title="My caption">
+                            <img src="images/velvet/im-vel-4.jpg" alt="" class="post_thumbnail">
+                            <div class="post_thumbnail_bg"></div>
+                        </a>
+                    </div>
+                    <!--<a href="#"><h5 class="porjectTitle">QUISQUE SODALES NISL ANTE</h5></a>-->
+                </div><!--Project-->
+                <div class="col-sm-4 project">
+                  <video width="365" height="255" controls>
+                    <source src="images/velvet/video-1.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                  </video>
                     <!--<a href="#"><h5 class="porjectTitle">QUISQUE SODALES NISL ANTE</h5></a>-->
                 </div><!--Project-->
             </div>
